# 2DEngine

./: :bp  CMakeLists.txt  README.md  options.json
include/: Camera.h  EventHandler.h  Log.h  MovementSystem.h  Renderer.h  Settings.h  SpriteComponent.h  TransformComponent.h
include/components/: Component.h  PhysicsBodyComponent.h  TransformComponent.h
src/: Camera.cpp  EventHandler.cpp  Log.cpp  MovementSystem.cpp  Renderer.cpp  Settings.cpp  SpriteComponent.cpp  TransformComponent.cpp  main.cpp
src/components/: Component.cpp  PhysicsBodyComponent.cpp  TransformComponent.cpp
